# cppTricks

./: .gitmodules  CMakeLists.txt  README.md  camera_front_wide_2_vehicle_extrinsics.yaml  camera_front_wide_intrinsics.yaml  main.cpp
src/: CMakeLists.txt
src/math/: CMakeLists.txt
src/math/include/: MathFunctions.h
src/math/src/: MathFunctions.cpp
src/pointcloud/: CMakeLists.txt
src/pointcloud/include/: demo.h  lidar_base.h  lidar_demo.h
src/pointcloud/src/: demo.cpp  lidar_demo.cpp
src/postprocess/: CMakeLists.txt
src/postprocess/include/: lane_base.h  lane_test.h  leastsquare.h  matrix_demo.h  ransac.h
src/postprocess/src/: lane_test.cpp  leastsquare.cpp  matrix_demo.cpp  ransac.cpp
src/sharedlib/: CMakeLists.txt
src/sharedlib/include/: library.h
src/sharedlib/src/: library.cpp
